# fastapi_firebase

./: .env.example  .gitignore  Dockerfile  pyproject.toml  scripts.py
app/: config.py  database.py  main.py
app/api/: router.py
app/api/clinics/: clinic_route.py
app/api/curriculo/: curriculo_route.py
app/api/patients/: patient_route.py  user_route.py
app/api/schedules/: schedule_route.py
app/core/: config.py  database.py
app/models/: clinic_models.py  curriculo.py  patient_models.py  schedule_models.py
app/service/: clinic_service.py  curriculum_service.py  patient_service.py  schedule_service.py
test/unit/controllers/: test_clinic_route.py  test_patient_route.py  test_schedules_route.py
