[tool.poetry]
name = "app"
version = "0.0.1"
description = ""
authors = ["Hylan Silva <hylansilva@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
firedantic = "^0.7.0"
firebase-admin = "^6.5.0"
pydantic-settings = "^2.2.1"
pydantic = {extras = ["email"], version = "^2.7.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.2"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
taskipy = "^1.12.2"
ruff = "^0.4.2"
isort = "^5.13.2"
blue = "^0.9.1"


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
dev = "fastapi dev app/main.py"
prod = "fastapi run app/main.py"
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
